example/errors/interpret/break_outside_loop.box

println("haiz");


br;
println("haizz");
